added change password feature

--- a/static/changePassword.html
+++ b/static/changePassword.html
@@ -7,14 +7,8 @@
     <title>Login</title>
   </head>
   <body>
-    <h1>Registration</h1>
-    <form id="reg-form">
-      <input
-        type="text"
-        autocomplete="off"
-        id="username"
-        placeholder="Username"
-      />
+    <h1>Change Password</h1>
+    <form id="change-form">
       <input
         type="text"
         autocomplete="off"
@@ -24,29 +18,31 @@
       <input type="submit" value="Submit" />
     </form>
     <a href="login.html">Login</a>
-    <a href="changePassword.html">Change Password</a>
+    <a href="index.html">Registration</a>
 
     <script>
-      const form = document.getElementById("reg-form");
-      form.addEventListener("submit", registerUser);
+      const form = document.getElementById("change-form");
+      form.addEventListener("submit", changePassword);
 
-      async function registerUser(e) {
+      async function changePassword(e) {
         e.preventDefault();
-        const username = document.getElementById("username").value;
         const password = document.getElementById("password").value;
         // Post the username/password to the /api/register database
-        const result = await fetch("/api/register", {
+        const result = await fetch("/api/change-password", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
           },
           body: JSON.stringify({
-            username,
-            password,
+            newpassword: password,
+            // possible security concern for larger codebases to use localStorage
+            token: localStorage.getItem("token"),
           }),
         }).then((res) => res.json());
         if (result.status === "ok") {
           // everythign went fine
+          console.log("Got the token:", result.data);
+          localStorage.setItem("token", result.data);
           alert("Success");
         } else {
           alert(result.error);
