updates to changepassword

--- a/static/changePassword.html
+++ b/static/changePassword.html
@@ -27,21 +27,25 @@
       async function changePassword(e) {
         e.preventDefault();
         const password = document.getElementById("password").value;
+
         // Post the username/password to the /api/register database
         const result = await fetch("/api/change-password", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
           },
+          //   This is sent as the req.body
           body: JSON.stringify({
             newpassword: password,
             // possible security concern for larger codebases to use localStorage
             token: localStorage.getItem("token"),
           }),
         }).then((res) => res.json());
+
         if (result.status === "ok") {
           // everythign went fine
-          console.log("Got the token:", result.data);
+          console.log("Password has been changed:", result.data);
+          // Overwrite the user password with the new password data
           localStorage.setItem("token", result.data);
           alert("Success");
         } else {
